[package]
name = "germinate-cli"
version = "0.1.0"
authors = ["Iain Earl <iain@itmecho.com>"]
edition = "2018"

[[bin]]
name = "germinate"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
germinate = "0.2.0"
anyhow = "1.0.31"
clap = "2.33.1"
tokio = "0.2.21"
openssl = "0.10"

[features]
tls-vendored = ["openssl/vendored"]
